# vcon-app-template

./: Dockerfile  docker-compose.yml  pyproject.toml  readme.md  requirements.txt  suggestion_api.py  suggestion_box.py  suggestionbox.py  vcondiary.py
